# mikan-subscribe

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  entrypoint.sh  settings.json.example
.cargo/: config.toml
.github/workflows/: build.yml  docker-publish.yml
bt/: Cargo.toml
bt/src/: db.rs  lib.rs  main.rs
src/: bt.rs  main.rs  subscribe.rs
src/store/: anime.rs  download.rs  episode.rs  mod.rs  onedrive.rs  subscribe.rs
src/util/: config.rs  llama.rs  mod.rs  reqwest.rs
src/worker/: download.rs  mod.rs  upload.rs
subscribe/: Cargo.toml
subscribe/src/: lib.rs
