[package]
name = "mikan-subscriber"
version = "0.1.0"
edition = "2021"

[dependencies]
librqbit = { version = "6.0.0", default-features = false, features = [
    "rust-tls",
] }
tokio = { version = "1.39.3", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
redb = "2.1.1"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
upload-backend = { git = "https://github.com/Chikage0o0/upload-backend.git" }


snafu = "0.8.4"
reqwest = { version = "0.12.5", default-features = false, features = [
    "gzip",
    "socks",
    "json",
    "http2",
    "charset",
    "rustls-tls",
] }
rss = "2.0.8"
scraper = { version = "0.20.0", features = ["atomic"] }
chrono = "0.4.38"
bincode = "1.3.3"
config = "0.14.0"
url = "2.5.2"
once_cell = "1.19.0"
flume = "0.11.0"
rand = "0.8.5"

[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9.103", features = ["vendored"] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
lto = "thin"      # Use Thin LTO for better compile times
strip = true      # Remove debug symbols
opt-level = "z"
codegen-units = 1
