[package]
name = "mikan-subscriber"
version = "0.1.1"
edition = "2021"

[dependencies]
librqbit = { version = "7.0.1" }
tokio = { version = "1.41.0", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
redb = "2.2.0"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
upload-backend = { git = "https://github.com/Chikage0o0/upload-backend.git" }


snafu = "0.8.5"
reqwest = { version = "0.12.9", default-features = false, features = [
    "gzip",
    "socks",
    "json",
    "http2",
    "charset",
    "rustls-tls",
] }
rss = "2.0.9"
scraper = { version = "0.22.0", features = ["atomic"] }
chrono = "0.4.38"
bincode = "1.3.3"
config = "0.15.0"
url = "2.5.2"
once_cell = "1.20.2"
flume = "0.11.1"
rand = "0.8.5"

[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9.104", features = ["vendored"] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
lto = "thin"      # Use Thin LTO for better compile times
strip = true      # Remove debug symbols
opt-level = "z"
codegen-units = 1
