[package]
name = "mikan-subscriber"
version = "0.1.1"
edition = "2021"

[dependencies]
librqbit = { version = "8.0.0" }
tokio = { version = "1.44.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
redb = "2.3.0"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
upload-backend = { git = "https://github.com/Chikage0o0/upload-backend.git" }


snafu = "0.8.5"
reqwest = { version = "0.12.11", default-features = false, features = [
    "gzip",
    "socks",
    "json",
    "http2",
    "charset",
    "rustls-tls",
] }
rss = "2.0.11"
scraper = { version = "0.23.1", features = ["atomic"] }
chrono = "0.4.39"
bincode = { version = "2.0.1", features = ["serde"] }
config = "0.15.4"
url = "2"
once_cell = "1.20.2"
flume = "0.11.1"
rand = "0.9.1"

[target.'cfg(target_env = "musl")'.dependencies]
openssl-sys = { version = "0.9.104", features = ["vendored"] }

[profile.release]
panic = "abort"   # Strip expensive panic clean-up logic
lto = "thin"      # Use Thin LTO for better compile times
strip = true      # Remove debug symbols
opt-level = "z"
codegen-units = 1
